--- a/templates/home.html
+++ b/templates/home.html
@@ -2,48 +2,31 @@
 <htlm>
   <head>
     <title>Jovian Careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: bold;
-        color: rgb(100, 100, 100);
-        text-align: center;
-      }
-      #banner{
-        width: 100%;
-        height: 360px;
-        object-fit: cover;
-      }
-      h2 {
-        font-family: Roboto;
-        font-size: 32px;
-        color: rgb(100, 100, 100);
-        text-align: center;
-      }
-      .bodytext {
-        font-family: Roboto;
-      }
-      #container{
-        max-width: 720px;
-        margin: 0 auto;
-      }
+      
     </style>
   </head>
   <body>
-    <div id = "container">
-      <h1>Jovian Careers</h1>
-      <img id = "banner" src="https://0e6e04da-ca39-491c-afb8-fa6ae7c8c2aa-00-11r5rag2uv5dr.sisko.replit.dev/static/banner.jpg">
-  
-    <h2>About Jovian</h2>
-      <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  
-      <h2>Open Positions</h2>
-      <p class="bodytext"> TO DO- Show jobs here</p>
-      <div style = "text-align: center;">
-      <button>Contact Us</button>
-        <p>Copyright 2024, Jovian</p>
-      </div>
+    <div class = "container, text-center">
+      <h1 class ="mt-2 mb-4">Jovian Careers</h1>
+      <img class="img-fluid" src="https://0e6e04da-ca39-491c-afb8-fa6ae7c8c2aa-00-11r5rag2uv5dr.sisko.replit.dev/static/banner.jpg">
+    <h2 class="mt-4">About Jovian</h2>
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2 class ="mt-2 mb-4">Open Positions</h2>
+    </div>
+    <div>
+      <!--Templating syntax, provided by Flask, a way to insert dynamic data into our html and css-->
+      {% for job in jobs %}
+      {% include 'jobitem.html' %}
+      {% endfor %}
+    </div>
+    
+    <div class="text-center">
+    <button class="btn btn-primary btn-lg">Contact Us</button>
+      <p class="mt-4">Copyright 2024, Jovian</p>
     </div>
   </body>
 </htlm>
