--- a/templates/home.html
+++ b/templates/home.html
@@ -6,15 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      
+      #banner{
+        width: 100%;
+        height: 360px;
+        object-fit: cover;
+        margin-bottom:16px;
+      }
     </style>
   </head>
   <body>
+    {% include 'simple_navbar.html'%}
+    <img class="img-fluid" src="https://0e6e04da-ca39-491c-afb8-fa6ae7c8c2aa-00-11r5rag2uv5dr.sisko.replit.dev/static/banner.jpg">
     <div class = "container, text-center">
-      <h1 class ="mt-2 mb-4">Jovian Careers</h1>
-      <img class="img-fluid" src="https://0e6e04da-ca39-491c-afb8-fa6ae7c8c2aa-00-11r5rag2uv5dr.sisko.replit.dev/static/banner.jpg">
-    <h2 class="mt-4">About Jovian</h2>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h1 class ="mt-4 mb-5">Jovian Careers</h1>
+      <div class="row">
+        <div class = "col-6">
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        </div>
+        <div class = "col-6" style = "margin-bottom:25px">
+        <img src="static/PeopleWorking.jpg" style="height:320px; border-radius:10px">
+        </div>
+      </div>
       <h2 class ="mt-2 mb-4">Open Positions</h2>
     </div>
     <div>
