--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -1,16 +1,14 @@
-<div style="margin-bottom:16px; padding-bottom:8px;" class="border-bottom row">
-  <div class= "col-9">
-    <h4 
-      style="color: rgb(120, 120, 120); 
-      margin-bottom: 4px">
-      {{job['title']}}
-    </h4>
-    <div><b>Location:</b> {{job['location']}}</div>
-    {% if 'salary' in job %} <!--Then only render the below div-->
-    <div><b>Salary:</b>{{job['salary']}}</div>
-    {% endif %}
-  </div>
-  <div class ="col-3">
-    <button type="button" class="btn btn-outline-primary">Apply</button>
+<div style="margin-bottom: 16px; padding-bottom: 8px;" class="border-bottom row">
+  <div class="row">
+    <div class="col-10" style="padding-left: 100px;"> <!-- Adjust padding here -->
+      <h4 style="color: rgb(120, 120, 120); margin-bottom: 4px;">{{job['title']}}</h4>
+      <div><b>Location:</b> {{job['location']}}</div>
+      {% if 'salary' in job %} <!--Then only render the below div-->
+      <div><b>Salary:</b>{{job['salary']}}</div>
+      {% endif %}
+    </div>
+    <div class="col-2">
+      <button type="button" class="btn btn-outline-primary">Apply</button>
+    </div>
   </div>
 </div>
