--- a/templates/home.html
+++ b/templates/home.html
@@ -2,21 +2,11 @@
 <htlm>
   <head>
     <title>Jovian Careers</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-      #banner{
-        width: 100%;
-        height: 360px;
-        object-fit: cover;
-        margin-bottom:16px;
-      }
-    </style>
+    {% include 'bootstrap.html' %}
   </head>
   <body>
     {% include 'simple_navbar.html'%}
-    <img class="img-fluid" src="https://0e6e04da-ca39-491c-afb8-fa6ae7c8c2aa-00-11r5rag2uv5dr.sisko.replit.dev/static/banner.jpg">
+    {% include 'banner.html' %}
     <div class = "container, text-center">
       <h1 class ="mt-4 mb-5">Jovian Careers</h1>
       <div class="row">
